WebCore/ksvg2/svg/SVGStyledElement.cpp
@@ -106,17 +106,10 @@ void SVGStyledElement::rebuildRenderer() const
     if (!renderer() || !renderer()->isRenderPath())
         return;
     
-    RenderPath* renderPath = static_cast<RenderPath*>(renderer());
-    bool renderSection = false;
-    
+    RenderPath* renderPath = static_cast<RenderPath*>(renderer());    
     SVGElement* parentElement = svg_dynamic_cast(parentNode());
     if (parentElement && parentElement->renderer() && parentElement->isStyled()
         && parentElement->childShouldCreateRenderer(const_cast<SVGStyledElement*>(this)))
-        renderSection = true;
-
-    renderPath->setPath(toPathData());
-
-    if (renderSection)
         renderPath->setNeedsLayout(true);
 }
 
