WebCore/rendering/RenderContainer.cpp
@@ -476,6 +476,7 @@ void RenderContainer::layout()
     RenderObject* child = m_firstChild;
     while (child) {
         child->layoutIfNeeded();
+        ASSERT(!child->needsLayout());
         child = child->nextSibling();
     }
     setNeedsLayout(false);
